# GameRpg

./: .gitignore  CMakeLists.txt  Makefile  README.md
headers/: board.hpp  classes.hpp  game.hpp  game_function.hpp  input.h  main.hpp  mob.hpp  player.hpp
headers/core/: board.h  entityManager.h  game.h  gamestate.h  textureManager.h  window.h
headers/entities/: bowItem.h  enemy.h  enemyState.h  entity.h  entityType.h  healItem.h  item.h  player.h  stats.h  swordItem.h
headers/systems/: combat.h  input.h  inputs.h  inventory.h  turn.h
headers/ui/: view.h
headers/utils/: direction.h  position.h  util.h
src/: board.cpp  entity_spawn.cpp  game_function.cpp  input.cpp  main.cpp  mob.cpp
src/core/: board.cpp  entityManager.cpp  game.cpp  textureManager.cpp  window.cpp
src/entities/: enemy.cpp  healItem.cpp  player.cpp  stats.cpp  swordItem.cpp
src/systems/: combat.cpp  input.cpp  inventory.cpp
src/ui/: view.cpp
src/utils/: util.cpp
